--- a/_posts/2016-10-06-isotsp.md
+++ b/_posts/2016-10-06-isotsp.md
@@ -21,7 +21,7 @@ Debord observed that the spectacle actively alters human interactions and relati
 
 Debord’s notions can be applied to our present-day reliance on technology. When you search for a place to talk with friends, Yelp sidetracks you into finding a spot with the best craft cocktails. What do you do when you get lost in a foreign city? Do you ask a passer-by for directions, or consult Google Maps on your smartphone? Perhaps Siri can help. When planning that upcoming vacation, do we search for places and sights to explore, or hotels and restaurants where we will conduct business transactions? Such technology is incredibly useful, but it also engineers our behavior. It reduces our lives into a daily series of commodity exchanges. 
 
-Debord would not be surprised (and yet horrified) by companies such as Facebook, Google and Twitter which turn us all into brand ambassadors, monetize our friendships, opinions and emotions (further through images: Emoji 😼). Our internal thoughts and experiences are increasingly becoming commodifiable assets.
+Debord would not be surprised (and yet horrified) by companies such as Facebook, Google and Twitter which turn us all into brand ambassadors, monetize our friendships, opinions and emotions (further through images: Emoji 🤷). Our internal thoughts and experiences are increasingly becoming commodifiable assets.
 
 The spectacle, which is driven by economic interest and profit, replaces lived reality with the “contemplation of the spectacle.” Being is replaced by having, and having is replaced by appearing. We no longer live. We aspire. We work to get richer. Paradoxically, we find ourselves working in order to have a “vacation.” We can’t seem to actually live without working. Capitalism has thus completely occupied social life.
 
