added link and image

--- a/_posts/2016-10-06-isotsp.md
+++ b/_posts/2016-10-06-isotsp.md
@@ -10,6 +10,9 @@ author: Ron. A
 license: cc-by-nc-sa
 ---
 
+![First picture in the series](/static/images/2016-10-06-salsa-n-chips.jpg)
+
+[#isotsp is currently on display, on Instagram.](https://www.instagram.com/explore/tags/isotsp/)
 
 > "In societies where modern conditions of production prevail, all of life presents itself as an immense accumulation of spectacles. Everything that was directly lived has moved away into representation."
 > <cite>Guy Debord</cite>
