--- a/_posts/2016-10-06-isotsp.md
+++ b/_posts/2016-10-06-isotsp.md
@@ -10,6 +10,8 @@ author: Ron. A
 license: cc-by-nc-sa
 ---
 
+#ISOTSP is an exhibition open to Instagram users from October 6th 2016 until it completes in 2017 (free admission). 
+
 ![First picture in the series](/static/images/2016-10-06-salsa-n-chips.jpg)
 
 [#isotsp is currently on display, on Instagram.](https://www.instagram.com/explore/tags/isotsp/)
@@ -20,13 +22,13 @@ license: cc-by-nc-sa
 > "The Spectacle is not a collection of images, but a social relation among people, mediated by images."
 > <cite>Guy Debord</cite>
 
-Debord observed that the spectacle actively alters human interactions and relationships. Images influence our lives and beliefs on a daily basis; advertising manufactures new desires and aspirations. The media interprets (and reduces) the world for us with the use of simple narratives. Photography and film collapses time and geographic distance — providing the illusion of universal connectivity. New products transform the way we live.
+Debord observed that the spectacle actively alters human interactions and relationships. Images influence our lives and beliefs on a daily basis; advertising manufactures new desires and aspirations. The media interprets (and reduces) the world for us with the use of simple narratives. Photography and film collapses time and geographic distance — providing the illusion of universal connectivity. New products transform the way we live<sup>[2](#2)</sup>.
 
-Debord’s notions can be applied to our present-day reliance on technology. When you search for a place to talk with friends, Yelp sidetracks you into finding a spot with the best craft cocktails. What do you do when you get lost in a foreign city? Do you ask a passer-by for directions, or consult Google Maps on your smartphone? Perhaps Siri can help. When planning that upcoming vacation, do we search for places and sights to explore, or hotels and restaurants where we will conduct business transactions? Such technology is incredibly useful, but it also engineers our behavior. It reduces our lives into a daily series of commodity exchanges. 
+Debord’s notions can be applied to our present-day reliance on technology. When you search for a spot to spend the night out  with friends, Yelp nudges your group to search for the new bar selling great craft cocktails. What do you do when you get lost in a foreign city? Do you ask a passer-by for directions, or consult Google Maps? Perhaps Siri can help. When planning that upcoming vacation, do the apps we use help us search for places and sights free to explore, or where to get hotels and restaurants where we will conduct business transactions? Such technology is incredibly useful, but it also subtly engineers our behavior. It reduces our lives into a daily series of commodity exchanges<sup>[2](#2)</sup>. 
 
-Debord would not be surprised (and yet horrified) by companies such as Facebook, Google and Twitter which turn us all into brand ambassadors, monetize our friendships, opinions and emotions (further through images: Emoji 🤷). Our internal thoughts and experiences are increasingly becoming commodifiable assets.
+Debord would not be surprised (and yet horrified) by companies such as Facebook, Google and Twitter gradually changing us all into brand ambassadors, monetize our friendships, opinions and emotions (further mediated through images of Emoji 🤷). Our internal thoughts and experiences are increasingly becoming commodifiable assets and "engagements" to be touted at board meetings.
 
-The spectacle, which is driven by economic interest and profit, replaces lived reality with the “contemplation of the spectacle.” Being is replaced by having, and having is replaced by appearing. We no longer live. We aspire. We work to get richer. Paradoxically, we find ourselves working in order to have a “vacation.” We can’t seem to actually live without working. Capitalism has thus completely occupied social life.
+The spectacle, which is driven by economic interest and profit, replaces lived reality with the “contemplation of the spectacle.” Being is replaced by having, and having is replaced by appearing. We no longer live. We aspire. We work to get richer. Paradoxically, we find ourselves working in order to have a “vacation.” We can’t seem to actually live without working. Capitalism has thus completely occupied social life<sup>[2](#2)</sup>.
 
 > "The more his life is now his [brand or] product, the more he is separated from his life."
 > <cite>Guy Debord</cite>
