--- a/_posts/2016-10-06-isotsp.md
+++ b/_posts/2016-10-06-isotsp.md
@@ -7,6 +7,7 @@ metaDescription: "An exhibition open to Instagram users from October 6th 2016 un
 metaKeywords: society, instagram, twitter, facebook, spectacle, society of the spectacle
 metaOgType: "article"
 author: Ron. A
+alternate: https://0xadada.pub/2016/10/06/isotsp/
 license: cc-by-nc-sa
 ---
 
